samples/_failures_safe/1761212303_15908d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed734323.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ed734323.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
